tests/fail/feat_chrono/ch_stable/unknown.stderr
error: Unknown chrono format O. See https://docs.rs/chrono/^0.4/chrono/format/strftime/ for a full list:
       At "{:%O}"
              ^
 --> $DIR/unknown.rs:2:26
  |
2 |     sscanf::scanf!("hi", "{:%O}", DateTime);
  |                          ^^^^^^^
